# Egyptian-ID-Validator-Py

./: .gitignore  LICENSE.md  MANIFEST.in  README.md  pyproject.toml  setup,py
.github/workflows/: python-package.yml
egyptian_id_validator/: __init__,py  validation.py
src/egyptian_id_validator/: generation.py
tests/: test_validation.py
