[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "egyptian-id-validator"
version = "0.1.0"
description = "A Python package for validating Egyptian National IDs."
authors = [
    { name = "Mohamed A. Abdallah", email = "eng.mohamed.a.abdallah@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.8"
license = { text = "CC BY-NC 4.0" }

[project.urls]
"Homepage" = "https://github.com/MohamedAAbdallah/Egyptian-ID-Validator-Py"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = ["tests"]